assets/css/style.css
  :root {
--tyrian-purple: #5f0f40ff;
--ruby-red: #9a031eff;
--dark-orange: #fb8b24ff;
--spanish-orange: #e36414ff;
--midnight-green-eagle-green: #0f4c5cff;
}

  * {
      box-sizing: border-box;
      padding: 0;
      margin: 0;
  }

  header {
      font-family: fantasy;
      padding: 1rem;
      color: rgb(255, 255, 255);
      background-color: var(--spanish-orange);
}

  header h1 {
      font-size: 3.3vw;
      display: inline-block;
}

  header nav {
      font-size: 1.5vw;
      padding: 0rem;
      margin-top: 2rem;
      margin-right: 1.5rem;
      float: right;
      background-color: var(--spanish-orange);
}

a {
      color: rgb(255, 255, 255);
}

  nav ul li {
      display: inline-block;
      margin-left: 1rem;
  }

  hr { 
      display: block;
      border-style: inset;
      border-width: 2%;
      border-color: black;
    } 

  body {
      display: block;
      background-color: rgb(226, 220, 220);
  }

  main {
      margin: 1.5rem;
      display: block;
  }
  
  #baerGardenParty {
      display: flex;
      max-height: 50%;
      max-width: 49%;
      float: right;
      margin-top: 1%;
      margin-bottom: 1%;
      position: relative;
  }

  .aboutMe {
      padding: 1%;
      float: left;
      background-color: var(--tyrian-purple);
      margin-top: 15%;
      display: block;
      border-radius: 3%;
      margin-right: 1%;
      max-height: 100%;
      max-width: 50%;
      justify-content: center;
      position: relative;

  }

  .aboutMe h2 {
      font-size: 2.4vw;
      padding: 8px;
      background-color: var(--dark-orange);
      border-width: 30px black;
      color: var(--midnight-green-eagle-green);
      border: 1px solid #CCC;
      text-align: center;
      border-radius: 10px;
      margin: 5%;
      margin-left: 25%;
      margin-right: 25%;
  }

  .aboutMe h2 span {
      position:relative;
      top:1px;
      display:inline-block;
      border-bottom:1px solid #AAA;
  }

  .aboutMeText {
      margin: 5%;
      margin-top: -3%;
      font-size: 1.3vw;
      color: wheat;
      display: flex;
      flex-direction: column;
      justify-content: center;
      text-align: center;
  }

  p {
      margin-top: 20px;
  }

  .myProjects {
      padding: 5px;

  }


  .myProjects h2 {
      font-size: 2.4vw;
      padding: 2px;
      background-color: var(--dark-orange);
      border-width: 30px black;
      color: var(--midnight-green-eagle-green);
      border: 1px solid #CCC;
      text-align: center;
      border-radius: 10px;
     
      position: static;
  }

  #dMMP {
      display: flex;
      max-height: 2%;
      max-width: 2%;
  }




  footer h2 {
      font-size: 2.4vw;
      padding: 2px;
      background-color: var(--dark-orange);
      border-width: 30px black;
      color: var(--midnight-green-eagle-green);
      border: 1px solid #CCC;
      text-align: center;
      border-radius: 10px;
     
      position: static;
  }

